# constraint-induced-structure

./: CITATION.cff  LICENSE  README.md  pyproject.toml
cise/: __init__.py  __main__.py  cli.py  config.py
cise.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cise/analysis/: __init__.py  controls.py  embeddings.py  metrics.py  plots.py  release_plots.py
cise/constraints/: __init__.py  base.py  hierarchy.py  l1.py  lowrank.py  smoothness.py
cise/experiments/: __init__.py  runner.py
cise/methods/: __init__.py  relaxation.py  reweighting.py
cise/sampling/: __init__.py  base.py  gaussian.py  uniform.py
configs/: default.yaml  release.yaml
docs/: LAUNCH_KIT.md  RELEASE_CHECKLIST.md
docs/CISE_OnePage_Note/: cise_note.tex
notebooks/: CISE_v1_demo.ipynb
outputs/release_run/: metrics_release.json  summary_release.md
scripts/: run_experiments.py  run_release.py
tests/: __init__.py  test_smoke.py
